0039-Beta ReplicatorG
* Added Replicator 2 Machine profile

0038-Beta ReplicatorG
* bugfix for commiting onboard preferences to Replicator(Single Extruder)
* bugfix for commiting oboard preferences to Thing-O-Matic

0037-Beta ReplicatorG
* bugfix for comb in skeinforge
* lowered The Replicator:Accelerated temperature
* changed start gcode to handle firmware 5.5 stepper power bugfix

0036-Beta ReplicatorG
* Updated for acceleration behavior
* Updated to have temperature as part of PrintOMatic settings
* Updated for smarter acceleration related configuration
* Added Slic3r and Miracle Grue engines, engine editors, etc

0035-Beta ReplicatorG
* Updated to handle accleration for The Replicator
0034-Beta ReplicatorG
* Updated t0 to t1 tolerance code 

0033 ReplicatorG
* Updated version number to avoid confusion
* Minor UI changes

0032 ReplicatorG 
* Extensive polishing of ReplicatorG
* Set various settings as the new default, such as Skeinforge47, etc

0031 ReplicatorG
* Updated start and end gcode
* Fixed dual extrusion bugs
* Full support for skeinforge 47

0031_Beta ReplicatorG
* Extensive Rewrite of RepG to support The Replicator
* Post Processing of Skeinforge changes added
* Start and end gcode can now be specified from machines/*.xml
* Dualstrusion refactored, Wipes are not currently supported
* Estimator and safety checks pulled into different thread
* Improved UI for safety checker  
* Machine Onboard Parameters and Toolhead Onboard Parameters merged
* New GCode for new Replicator FUNctionality! M70-M73
* Improved temperature polling
* GCode now prepended with some meta-info

0030_CES ReplicatorG
* packaged for CES

0029_r2 ReplicatorG
* Fixed problem with Raft in Print-O-Matic settings

0029 ReplicatorG
* Fixed problem with Raft in Print-O-Matic settings
* Fixed some OnboardPreferences Abstraction
* Added defaults reset button for Print-O-Matic
* Updated and simplified some international number parsing
* Updated Opboard Parameters dialog